--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>
+      <h2>
         {{title}}
-      </h1>
+      </h2>
     </div>
   </div>
 </div>
